# UNO_ED

./: README.md
Documentacion/: TAD'S.drawio
Game/: CMakeLists.txt
Game/src/: UNO.cpp
Game/src/cards/: Card.cpp  Card.h  NormalCard.cpp  NormalCard.h  WildCard.cpp  WildCard.h
Game/src/cards/wildcards/: BlockWildcard.cpp  BlockWildcard.h  ColorWildcard.cpp  ColorWildcard.h  PlusFourWildcard.cpp  PlusFourWildcard.h  PlusTwoWildcard.cpp  PlusTwoWildcard.h  ReverseWildcard.cpp  ReverseWildcard.h
Game/src/engine/: DeckMaker.cpp  DeckMaker.h  Game.cpp  Game.h  Player.cpp  Player.h  Turn.cpp  Turn.h  UnoEngine.cpp  UnoEngine.h
Game/src/engine/makers/: DeckMaker.cpp  DeckMaker.h  TurnMaker.cpp  TurnMaker.h
Game/src/engine/settings/: Setting.cpp  Setting.h
Game/src/exceptions/: InputException.cpp  InputException.h  ListException.cpp  ListException.h
Game/src/lists/: CircularList.cpp  CircularList.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  NodeC.cpp  NodeC.h  Stack.cpp  Stack.h
Game/src/menus/: GameMenu.cpp  GameMenu.h  Menu.cpp  Menu.h
Game/src/wildcards/: BlockWildcard.h  ColorWildcard.cpp  ColorWildcard.h  PlusFourWildcard.cpp  PlusFourWildcard.h  PlusTwoWildcard.cpp  PlusTwoWildcard.h  ReverseWildcard.h
